// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TaskBar /> Snapshots <Clock /> should match snapshot 1`] = `
.c0 {
  padding-left: 6px;
  padding-right: 6px;
  padding-top: 2px;
  padding-bottom: 2px;
  background-color: transparent;
  box-shadow: inset 0px 0px 0px 0px, inset 1px 1px 0px 0px #868a8e, 0.5px 0.5px 0px 0.5px #ffffff;
}

.c3 {
  background-color: #c3c7cb;
  box-shadow: inset 0.5px 0.5px 0px 0.5px #ffffff, inset 0 0 0 1px #868a8e, 1px 0px 0 0px #000000, 0px 1px 0 0px #000000, 1px 1px 0 0px #000000;
  background: radial-gradient(#ff0 20%,transparent 20%) 0 0, radial-gradient(#ff0 20%,transparent 20%) 4px 4px, radial-gradient(rgba(255,255,255,0.1) 20%,transparent 25%) 0 1px, radial-gradient(rgba(255,255,255,0.1) 20%,transparent 25%) 3px 4px;
  background-size: 7px 7px;
  background-color: #ffffff;
  border: 1px solid;
  padding: 2px 2px 2px 4px;
  box-shadow: none;
  position: absolute;
  top: -20px;
  text-align: center;
  z-index: 100;
  display: none;
}

.c1 {
  display: inline-block;
  position: relative;
  cursor: default;
  white-space: nowrap;
}

.c2 div:first-child {
  right: 0;
}

<div>
  <div
    class="c0"
    style="display: flex; justify-content: center; align-items: center;"
  >
    <div
      class="c1 c2"
    >
      <div
        class="c3"
      >
        30 March 2020
      </div>
      
    </div>
  </div>
</div>
`;

exports[`<TaskBar /> Snapshots <WindowButton /> should match snapshot 1`] = `
.c1 {
  display: block;
  width: 20px;
  height: 20px;
  background-image: url('none');
  background-repeat: no-repeat;
  background-position: center;
  background-size: contain;
}

.c0 {
  margin-right: 2px;
  background-color: #c3c7cb;
  box-shadow: inset 0.5px 0.5px 0px 0.5px #ffffff, inset 0 0 0 1px #868a8e, 1px 0px 0 0px #000000, 0px 1px 0 0px #000000, 1px 1px 0 0px #000000;
}

<div>
  <div
    class="c0"
    style="display: flex; justify-content: flex-start; align-items: center; padding: 2px 3px; max-width: 150px; width: 100%;"
  >
    <i
      class="c1"
      height="20"
      name=""
      style="margin-right: 4px;"
      width="20"
    />
    
  </div>
</div>
`;

exports[`<TaskBar /> Snapshots <WindowButton /> should match snapshot with active prop 1`] = `
.c1 {
  display: block;
  width: 20px;
  height: 20px;
  background-image: url('none');
  background-repeat: no-repeat;
  background-position: center;
  background-size: contain;
}

.c0 {
  margin-right: 2px;
  background-color: #c3c7cb;
  box-shadow: inset 0.5px 0.5px 0px 0.5px #ffffff, inset 0 0 0 1px #868a8e, 1px 0px 0 0px #000000, 0px 1px 0 0px #000000, 1px 1px 0 0px #000000;
}

.c2 {
  margin-right: 2px;
  background-color: #e6e6e6;
  box-shadow: inset 0px 0px 0px 0px, inset 1px 1px 0px 0px #868a8e, 0.5px 0.5px 0px 0.5px #ffffff;
}

<div>
  <div
    class="c0"
    style="display: flex; justify-content: flex-start; align-items: center; padding: 2px 3px; max-width: 150px;"
  >
    <i
      class="c1"
      height="20"
      name=""
      style="margin-right: 4px;"
      width="20"
    />
    
  </div>
  <div
    class="c2"
    style="display: flex; justify-content: flex-start; align-items: center; padding: 2px 3px; max-width: 150px;"
  >
    <i
      class="c1"
      height="20"
      name=""
      style="margin-right: 4px;"
      width="20"
    />
    
  </div>
</div>
`;

exports[`<TaskBar /> Snapshots <WindowButton /> should match snapshot with icon prop 1`] = `
.c1 {
  display: block;
  width: 20px;
  height: 20px;
  background-image: url('test-file-stub');
  background-repeat: no-repeat;
  background-position: center;
  background-size: contain;
}

.c0 {
  margin-right: 2px;
  background-color: #c3c7cb;
  box-shadow: inset 0.5px 0.5px 0px 0.5px #ffffff, inset 0 0 0 1px #868a8e, 1px 0px 0 0px #000000, 0px 1px 0 0px #000000, 1px 1px 0 0px #000000;
}

<div>
  <div
    class="c0"
    style="display: flex; justify-content: flex-start; align-items: center; padding: 2px 3px; max-width: 150px; width: 100%;"
  >
    <i
      class="c1"
      height="20"
      name="bat"
      style="margin-right: 4px;"
      width="20"
    />
    
  </div>
</div>
`;

exports[`<TaskBar /> Snapshots <WindowButton /> should match snapshot with small prop 1`] = `
.c1 {
  display: block;
  width: 20px;
  height: 20px;
  background-image: url('none');
  background-repeat: no-repeat;
  background-position: center;
  background-size: contain;
}

.c0 {
  margin-right: 2px;
  background-color: #c3c7cb;
  box-shadow: inset 0.5px 0.5px 0px 0.5px #ffffff, inset 0 0 0 1px #868a8e, 1px 0px 0 0px #000000, 0px 1px 0 0px #000000, 1px 1px 0 0px #000000;
}

<div>
  <div
    class="c0"
    style="display: flex; justify-content: flex-start; align-items: center; padding: 2px 3px; max-width: 150px;"
  >
    <i
      class="c1"
      height="20"
      name=""
      style="margin-right: 4px;"
      width="20"
    />
    
  </div>
</div>
`;

exports[`<TaskBar /> Snapshots should match snapshot 1`] = `
.c2 {
  display: block;
  width: 20px;
  height: 20px;
  background-image: url('test-file-stub');
  background-repeat: no-repeat;
  background-position: center;
  background-size: contain;
}

.c0 {
  padding: 2px;
  width: 100%;
  background-color: #c3c7cb;
  box-shadow: inset 0.5px 0.5px 0px 0.5px #ffffff, inset 0 0 0 1px #868a8e, 1px 0px 0 0px #000000, 0px 1px 0 0px #000000, 1px 1px 0 0px #000000;
}

.c1 {
  margin-right: 2px;
  background-color: #c3c7cb;
  box-shadow: inset 0.5px 0.5px 0px 0.5px #ffffff, inset 0 0 0 1px #868a8e, 1px 0px 0 0px #000000, 0px 1px 0 0px #000000, 1px 1px 0 0px #000000;
}

.c3 {
  padding-left: 0;
  margin-left: 2px;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #c3c7cb;
  box-shadow: none;
}

.c4 {
  padding-left: 6px;
  padding-right: 6px;
  padding-top: 2px;
  padding-bottom: 2px;
  background-color: transparent;
  box-shadow: inset 0px 0px 0px 0px, inset 1px 1px 0px 0px #868a8e, 0.5px 0.5px 0px 0.5px #ffffff;
}

.c7 {
  background-color: #c3c7cb;
  box-shadow: inset 0.5px 0.5px 0px 0.5px #ffffff, inset 0 0 0 1px #868a8e, 1px 0px 0 0px #000000, 0px 1px 0 0px #000000, 1px 1px 0 0px #000000;
  background: radial-gradient(#ff0 20%,transparent 20%) 0 0, radial-gradient(#ff0 20%,transparent 20%) 4px 4px, radial-gradient(rgba(255,255,255,0.1) 20%,transparent 25%) 0 1px, radial-gradient(rgba(255,255,255,0.1) 20%,transparent 25%) 3px 4px;
  background-size: 7px 7px;
  background-color: #ffffff;
  border: 1px solid;
  padding: 2px 2px 2px 4px;
  box-shadow: none;
  position: absolute;
  top: -20px;
  text-align: center;
  z-index: 100;
  display: none;
}

.c5 {
  display: inline-block;
  position: relative;
  cursor: default;
  white-space: nowrap;
}

.c6 div:first-child {
  right: 0;
}

<div>
  <div
    class="c0"
    style="position: fixed; bottom: 0px; left: 0px; right: 0px; display: flex; justify-content: space-between; height: 28px;"
    width="100%"
  >
    <div
      class="c1"
      style="display: flex; justify-content: flex-start; align-items: center; padding: 2px 3px; max-width: 150px;"
    >
      <i
        class="c2"
        height="20"
        name="logo"
        style="margin-right: 4px;"
        width="20"
      />
      Start
    </div>
    <div
      class="c3"
      display="flex"
      width="100%"
    />
    <div
      class="c4"
      style="display: flex; justify-content: center; align-items: center;"
    >
      <div
        class="c5 c6"
      >
        <div
          class="c7"
        >
          30 March 2020
        </div>
        
      </div>
    </div>
  </div>
</div>
`;
